# gallop

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  config.cpp  config.hpp  discord.cpp  discord.hpp  dllmain.cpp  gallop.hpp  gallop_logo.h  gui.cpp  gui.hpp  gui_main.cpp  hook.cpp  hook.hpp  image.cpp  image.hpp  imgui_sink.cpp  imgui_sink.hpp  ipc_sink.hpp  lucide.cpp  mdb.cpp  mdb.hpp  mplus1code.cpp  notosans_symbols.cpp  notosans_symbols2.cpp
src/hooks/: menu.cpp  models.cpp
